--- a/style.scss
+++ b/style.scss
@@ -65,7 +65,7 @@ body {
     left: 0;
     right: 0;
     display: flex;
-    padding: 0 1rem;
+    padding: 1rem;
     justify-content: center;
     align-items: center;
     background: #fff;
@@ -106,7 +106,6 @@ body {
     align-content: center;
     position: relative;
     width: 100%;
-    height: 50px;
 
     img {
         display: inline-block;
@@ -160,6 +159,21 @@ body {
     margin: 0 0 3rem 0;
     cursor: pointer;
     color: $primarycolor;
+
+    &::after {
+        content: '';
+        width: 0;
+        height: 2px;
+        display: block;
+        background: $primarybg;
+        transition: width 0.5s;
+    }
+
+    &:hover {
+        &::after {
+            width: 100%;
+        }
+    }
 }
 
 .header__menuitem_smhide {
@@ -184,7 +198,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 3rem 0 0 0;
+    margin: 0;
     position: relative;
 }
 
@@ -211,7 +225,7 @@ body {
     width: 100%;
     align-self: center;
     grid-column: 1 / -1;
-    grid-row: 2 / 9;
+    grid-row: 4 / 9;
     text-align: center;
     line-height: 1.6;
 
@@ -247,7 +261,7 @@ body {
     display: flex;
     justify-content: center;
     grid-column: 1 / -1;
-    grid-row: 8 / 10;
+    grid-row: 10 / 11;
 
     svg {
         justify-self: flex-end;
@@ -382,36 +396,49 @@ body {
 
 .about__circle {
     padding: 0.3rem;
+    height: 8rem;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
     margin: 0 0 1rem 0;
     position: relative;
     border-radius: 0.6rem;
-
+    border-top: 3px solid $primarybg;
+    box-shadow: 0 0 5px #eeece6;
 }
 
 .about__circle_img {
     display: flex;
-    width: 100px;
-    height: 100px;
+    width: 7rem;
+    height: 7rem;
     border-radius: 50%;
     justify-content: center;
     align-items: center;
     justify-self: center;
     background: #fff;
+    border: 2px solid #eeece6;
+    z-index: 2;
 }
 
 .about__circle_text {
+    //background: $primarybg;
+    margin: auto 0 auto -1.8rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    border-radius: 0 10px 10px 0;
+
     h4 {
         font-size: 0.9rem;
     }
 
     p {
         font-size: 0.8rem;
-        font-weight: 300;
-        padding: 0 2rem;
         display: flex;
-        text-align: center;
+        padding: 0 0 0 2.5rem;
     }
 }
 
@@ -430,15 +457,30 @@ body {
         border: none;
         border-radius: 5px;
         padding: 0.3rem;
-        background: #FFE07A4A;
+        background: #eeece6;
+        display: block;
+
+        &:focus {
+            border-radius: 0;
+            border-bottom: 2px solid $primarybg;
+            transition: border-bottom, background-color 0.5s;
+            background: #fff;
+        }
     }
 
     textarea {
         border: none;
         border-radius: 5px;
         padding: 0.3rem;
-        background: #FFE07A4A;
+        background: #eeece6;
         resize: none;
+
+        &:focus {
+            border-radius: 0;
+            border-bottom: 2px solid $primarybg;
+            transition: border-bottom, background-color 0.5s;
+            background: #fff;
+        }
     }
 
     button {
@@ -543,14 +585,15 @@ body {
     align-items: center;
 
     ul {
-        margin: 0 0 1rem 0;
+        margin: 0;
+        display: flex;
 
         li {
             font-size: 0.8rem;
-            margin: 0 0 0.5rem 0;
+            margin: 0.3rem;
             text-align: center;
-            width: 10rem;
-            height: 10rem;
+            width: 8rem;
+            height: 8rem;
             border: 3px solid $primarybg;
             background: #eeece6;
             border-radius: 50%;
@@ -704,7 +747,7 @@ body {
 .footer__inner {
     display: flex;
     flex-direction: column;
-    padding: 0 1rem;
+    padding: 0;
 
     a {
         color: #fff;
@@ -716,19 +759,36 @@ body {
     }
 
 }
+
 .footer__social,
 .footer__contact,
 .footer__resource,
 .footer__logo,
-.footer__copy{
-    padding: 2rem 0;
-    a{
-        margin: 0 1rem 0 0;
+.footer__copy {
+    padding: 1.5rem 1rem;
+
+    ul {
+        display: flex;
+
+        li {
+            margin: 0 0.5rem 0 0;
+            text-decoration: underline;
+        }
+    }
+
+}
+
+.footer__logo {
+    a {
+        font-size: 1.5rem;
+        text-decoration: none;
     }
 }
 
-.footer__contact{
-    i{
+.footer__contact {
+    border: none;
+
+    i {
         margin: 0 1rem 0 0;
     }
 }
