--- a/style.scss
+++ b/style.scss
@@ -396,7 +396,7 @@ body {
 
 .about__circle {
     padding: 0.3rem;
-    height: 8rem;
+    height: 10rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -409,16 +409,16 @@ body {
 }
 
 .about__circle_img {
-    display: flex;
-    width: 7rem;
-    height: 7rem;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
-    justify-content: center;
-    align-items: center;
-    justify-self: center;
     background: #fff;
     border: 2px solid #eeece6;
     z-index: 2;
+    img{
+        width: 100px;
+        height: 100px;
+    }
 }
 
 .about__circle_text {
