updates to styling

--- a/style.scss
+++ b/style.scss
@@ -389,7 +389,7 @@ body {
     display: flex;
     flex-direction: column;
     margin: 1rem 0 0 0;
-    padding: 1rem;
+    padding: 0;
     position: relative;
     max-width: 80rem;
 }
@@ -401,7 +401,7 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin: 0 0 1rem 0;
+    margin: 0 1.6rem 1rem 1.6rem;
     position: relative;
     border-radius: 0.6rem;
     border-top: 3px solid $primarybg;
@@ -444,13 +444,23 @@ body {
 
 .about__joinus {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    h3{
+        max-width: 40rem;
+        width: 90%;
+        background: $primarybg;
+        text-align: center;
+        border-bottom: 2px solid $secondarybg;
+        margin: 1em 0;
+    }
 }
 
 .about__subscribe {
     display: flex;
     flex-direction: column;
-    padding: 0 1.5rem;
+    padding: 0;
     width: 90%;
 
     input {
