--- a/styles/style.css
+++ b/styles/style.css
@@ -363,7 +363,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 1rem 0 0 0;
-  padding: 1rem;
+  padding: 0;
   position: relative;
   max-width: 80rem;
 }
@@ -375,7 +375,7 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin: 0 0 1rem 0;
+  margin: 0 1.6rem 1rem 1.6rem;
   position: relative;
   border-radius: 0.6rem;
   border-top: 3px solid #FFDE70;
@@ -415,13 +415,23 @@ body {
 
 .about__joinus {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+}
+.about__joinus h3 {
+  max-width: 40rem;
+  width: 90%;
+  background: #FFDE70;
+  text-align: center;
+  border-bottom: 2px solid #03243C;
+  margin: 1em 0;
 }
 
 .about__subscribe {
   display: flex;
   flex-direction: column;
-  padding: 0 1.5rem;
+  padding: 0;
   width: 90%;
 }
 .about__subscribe input {
@@ -972,7 +982,7 @@ body {
   }
 
   .about__circle {
-    margin: 0 0 1rem 0;
+    margin: 0 0 2rem 0;
     max-width: 80rem;
     width: 30rem;
     height: 150px;
@@ -990,7 +1000,7 @@ body {
   }
 
   .about__subscribe {
-    max-width: 64rem;
+    max-width: 40rem;
   }
 
   /*--------APPROACH-----------------*/
