--- a/_xlarge.scss
+++ b/_xlarge.scss
@@ -12,6 +12,9 @@
 .inner {
     max-width: 100%;
 }
+.wraparound{
+    max-width: 64rem;
+}
 
 /*--------HEADER-----------------*/
 
@@ -88,7 +91,7 @@
 .landing__valueprop {
     margin: 0;
     font-size: 24px;
-    grid-column: 1 / -1;
+    grid-column: 3 / 11;
     grid-row: 4 / 9;
     max-width: 80rem;
 }
@@ -132,7 +135,6 @@
     grid-row: 1 / 3;
     padding: 3rem 0 0 0;
     font-size: 1rem;
-    max-width: 80rem;
 }
 
 .intro__image {
@@ -155,7 +157,6 @@
 
 .about__hero {
     background: $secondarybg;
-    height: 60vh;
     position: relative;
     display: grid;
     padding: 0;
@@ -163,23 +164,23 @@
     grid-template-rows: repeat(6, auto);
     justify-content: center;
     margin: 1rem 0 0 0;
-    max-width: 80rem;
+    max-width: 65rem;
 
     blockquote {
         font-size: 2.5em;
-        grid-column: 3 / 6;
+        grid-column: 2 / 7;
         grid-row: 1 / 6;
         margin: 0;
         text-align: left;
         justify-content: flex-end;
-        align-self: center;
+        align-self: flex-start;
     }
 
 }
 
 .about__quote {
     font-size: 1em;
-    grid-column: 3 / 5;
+    grid-column: 2 / 5;
     grid-row: 5 / 7;
     margin: 0;
     align-self: flex-start;
@@ -193,7 +194,7 @@
 .about__overlay {
     width: 100%;
     height: 100%;
-    grid-column: 3 / 11;
+    grid-column: 5 / 12;
     grid-row: 1 / -1;
     display: flex;
     justify-content: center;
@@ -206,11 +207,10 @@
 }
 
 .about__text {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    display: flex;
+    flex-direction: column;
     p {
         padding: 0 0 1.6rem 0;
-        max-width: 80rem;
         text-align: left;
         grid-column: 3 / 11;
     }
@@ -229,7 +229,6 @@
 
 .about__circle {
     margin: 0 0 2rem 0;
-    max-width: 80rem;
     width: 30rem;
     height: 150px;
     p {
@@ -251,7 +250,9 @@
 /*--------APPROACH-----------------*/
 
 .approach__about {
-    padding: 2rem 13rem;
+    padding: 2rem 0;
+    align-items: center;
+
 }
 
 
@@ -301,21 +302,23 @@
 
 .netscience__inner_disc {
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .netscience__text {
     display: flex;
     flex-direction: column;
-    max-width: 80rem;
+    
 
     p {
-        padding: 1em 10em;
+        padding: 1em 0;
     }
 }
 
 .netscience__apps {
     grid-template-columns: repeat(12, 1fr);
-    max-width: 80rem;
+    max-width: 65rem;
 
     h3 {
         justify-self: center;
@@ -454,6 +457,10 @@
 .footer__social {
     grid-column: 11 / 12;
     border-top: 1px solid transparent;
+    ul{
+        display: flex;
+        flex-direction: row;
+    }
 }
 
 .footer__copy {
