--- a/styles/style.css
+++ b/styles/style.css
@@ -273,7 +273,7 @@ body {
 .intro__text {
   grid-column: 1/-1;
   grid-row: 2/6;
-  padding: 2rem;
+  padding: 1.6rem;
 }
 
 .intro__image {
@@ -315,7 +315,7 @@ body {
   font-weight: bold;
   grid-column: 1/5;
   grid-row: 1/5;
-  margin: 0 0 0 1rem;
+  margin: 0 0 0 1.6rem;
 }
 
 .about__quote {
@@ -363,13 +363,13 @@ body {
   display: flex;
   flex-direction: column;
   margin: 1rem 0 0 0;
-  padding: 0;
+  padding: 1.6rem 0;
   position: relative;
   max-width: 80rem;
 }
 
 .about__circle {
-  padding: 0.3rem;
+  padding: 1rem;
   height: 10rem;
   display: flex;
   flex-direction: row;
@@ -418,24 +418,24 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 1.6rem;
 }
 .about__joinus h3 {
   max-width: 40rem;
-  width: 90%;
+  width: 100%;
   background: #FFDE70;
   text-align: center;
-  border-bottom: 2px solid #03243C;
-  margin: 1em 0;
+  box-shadow: inset 0 30px 0 -60px #03243C;
+  margin: 0.5rem 0;
 }
 
 .about__subscribe {
   display: flex;
   flex-direction: column;
-  padding: 0;
-  width: 90%;
+  width: 100%;
 }
 .about__subscribe input {
-  border: none;
+  border: 2px solid transparent;
   border-radius: 5px;
   padding: 0.3rem;
   background: #eeece6;
@@ -481,22 +481,16 @@ body {
   flex-direction: column;
 }
 
-.approach__details {
-  display: flex;
-  flex-direction: column;
-}
-
 .approach__about {
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  padding: 1.6rem;
 }
 .approach__about p {
-  margin: 0 0 1rem 0;
+  margin: 0 0 2rem 0;
 }
 
 .approach__banner {
-  padding: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -510,19 +504,21 @@ body {
   background: #FFDE70;
 }
 .approach__seasons p {
-  padding: 1rem 2rem 0.3rem;
+  padding: 1rem 0 0.5rem 0;
 }
 
 .approach__season1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 1.6rem;
 }
 
 .approach__intro {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 1rem 0;
 }
 
 .approach__cta {
@@ -571,12 +567,35 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
+  transition: opacity 0.5s;
+}
+.approach__upcoming ul li:hover span {
+  opacity: 0.5;
+  transition: opacity 0.5s;
+}
+.approach__upcoming ul li:hover i {
+  opacity: 1;
+  transition: opacity 0.5s;
 }
 .approach__upcoming ul li i {
-  margin: 0 0 1rem 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  opacity: 0.2;
+  transition: opacity 0.5s;
+  color: #03243C;
+  cursor: pointer;
+  transition: opacity 0.5s;
 }
-.approach__upcoming ul li h4 {
-  padding: 0.5rem;
+.approach__upcoming ul li span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: opacity 0.5s;
 }
 .approach__upcoming h3 {
   font-weight: 600;
@@ -691,7 +710,7 @@ body {
 /*--------FOOTER-----------------*/
 .footer {
   background: #03243C;
-  margin: 2rem 0 1rem 0;
+  margin: 2rem 0 1rem;
   display: flex;
   flex-direction: column;
   color: #fff;
@@ -715,7 +734,7 @@ body {
 .footer__resource,
 .footer__logo,
 .footer__copy {
-  padding: 1.5rem 1rem;
+  padding: 1.5rem 1.6rem;
 }
 .footer__social ul,
 .footer__contact ul,
@@ -742,7 +761,7 @@ body {
   border: none;
 }
 .footer__contact i {
-  margin: 0 1rem 0 0;
+  margin: 0 0.5rem 0 0;
 }
 
 .footer__resource {
@@ -776,6 +795,10 @@ body {
 
   .inner {
     max-width: 100%;
+  }
+
+  .wraparound {
+    max-width: 64rem;
   }
 
   /*--------HEADER-----------------*/
@@ -850,7 +873,7 @@ body {
   .landing__valueprop {
     margin: 0;
     font-size: 24px;
-    grid-column: 1/-1;
+    grid-column: 3/11;
     grid-row: 4/9;
     max-width: 80rem;
   }
@@ -892,7 +915,6 @@ body {
     grid-row: 1/3;
     padding: 3rem 0 0 0;
     font-size: 1rem;
-    max-width: 80rem;
   }
 
   .intro__image {
@@ -912,7 +934,6 @@ body {
   /*--------ABOUT-----------------*/
   .about__hero {
     background: #03243C;
-    height: 60vh;
     position: relative;
     display: grid;
     padding: 0;
@@ -920,21 +941,21 @@ body {
     grid-template-rows: repeat(6, auto);
     justify-content: center;
     margin: 1rem 0 0 0;
-    max-width: 80rem;
+    max-width: 65rem;
   }
   .about__hero blockquote {
     font-size: 2.5em;
-    grid-column: 3/6;
+    grid-column: 2/7;
     grid-row: 1/6;
     margin: 0;
     text-align: left;
     justify-content: flex-end;
-    align-self: center;
+    align-self: flex-start;
   }
 
   .about__quote {
     font-size: 1em;
-    grid-column: 3/5;
+    grid-column: 2/5;
     grid-row: 5/7;
     margin: 0;
     align-self: flex-start;
@@ -948,7 +969,7 @@ body {
   .about__overlay {
     width: 100%;
     height: 100%;
-    grid-column: 3/11;
+    grid-column: 5/12;
     grid-row: 1/-1;
     display: flex;
     justify-content: center;
@@ -960,12 +981,11 @@ body {
   }
 
   .about__text {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    display: flex;
+    flex-direction: column;
   }
   .about__text p {
     padding: 0 0 1.6rem 0;
-    max-width: 80rem;
     text-align: left;
     grid-column: 3/11;
   }
@@ -983,7 +1003,6 @@ body {
 
   .about__circle {
     margin: 0 0 2rem 0;
-    max-width: 80rem;
     width: 30rem;
     height: 150px;
   }
@@ -1005,7 +1024,8 @@ body {
 
   /*--------APPROACH-----------------*/
   .approach__about {
-    padding: 2rem 13rem;
+    padding: 2rem 0;
+    align-items: center;
   }
 
   .approach__season1 {
@@ -1045,20 +1065,21 @@ body {
 
   .netscience__inner_disc {
     display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .netscience__text {
     display: flex;
     flex-direction: column;
-    max-width: 80rem;
   }
   .netscience__text p {
-    padding: 1em 10em;
+    padding: 1em 0;
   }
 
   .netscience__apps {
     grid-template-columns: repeat(12, 1fr);
-    max-width: 80rem;
+    max-width: 65rem;
   }
   .netscience__apps h3 {
     justify-self: center;
@@ -1194,6 +1215,10 @@ body {
   .footer__social {
     grid-column: 11/12;
     border-top: 1px solid transparent;
+  }
+  .footer__social ul {
+    display: flex;
+    flex-direction: row;
   }
 
   .footer__copy {
