--- a/_xlarge.scss
+++ b/_xlarge.scss
@@ -12,9 +12,7 @@
 .inner {
     max-width: 100%;
 }
-.wraparound{
-    max-width: 64rem;
-}
+
 
 /*--------HEADER-----------------*/
 
@@ -22,344 +20,120 @@
     padding: 1em;
 }
 
-.header__home_smhide {
-    display: none;
-}
-
-.header__hamburger {
-    display: none;
-}
-
-.header__logo {
-    display: flex;
-    justify-content: stretch;
-    position: relative;
-    width: 40%;
-}
-
-.header__navbar {
-    position: relative;
-    opacity: 1;
-    display: flex;
-    transition-property: none;
-    margin: 0;
-    animation: none;
-    box-shadow: none;
-    width: 100%;
-}
-
-.header__menu {
-    padding: 0;
-    text-align: left;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 100%;
-}
-
-.header__menuitem {
-    margin: 0 0 0 2em;
-}
-
-.header__menuitem_smhide {
-    display: block;
-}
-
-.header__close {
-    display: none;
-}
-
-
-/*--------LANDING-----------------*/
-
-.main {
-    display: flex;
-    flex-direction: column;
-}
-
-.landing {
-    align-items: center;
-    margin: 0;
-    position: relative;
-}
-
-.landing__inner {
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(12, 1fr);
-}
-
-.landing__valueprop {
-    margin: 0;
-    font-size: 24px;
-    grid-column: 3 / 11;
-    grid-row: 4 / 9;
-    max-width: 80rem;
-}
-
-.landing__valueprop_span1 {
-    font-size: 2em;
-    font-weight: 700;
-    margin: 0 0 1em 0;
-}
-
-.landing__valueprop_span2 {
-    font-size: 1.6em;
-    font-weight: 700;
-    margin: 0 0 1em 0;
-}
-
-.landing__valueprop_span3 {
-    font-size: 3em;
-    font-weight: 700;
-}
-
-
-.landing__cta {
-    grid-column: 1 / -1;
-    grid-row: 10 / 11;
-}
-
-/*--------INTRO-----------------*/
-
-.intro {
-    padding: 0;
-}
-
-.intro__inner {
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto;
-}
+/*--------ABOUT-----------------*/
 
 .intro__text {
-    grid-column: 3 / 11;
-    grid-row: 1 / 3;
-    padding: 3rem 0 0 0;
-    font-size: 1rem;
+    padding: 8rem;
 }
 
-.intro__image {
-    grid-column: 7 / 12;
-    grid-row: 1 / 6;
-    width: 25rem;
-    height: 25rem;
-
-    img {
-        width: 100%;
-        min-width: 25rem;
-        max-width: 25rem;
-        opacity: 0.8;
-        object-fit: cover;
-    }
-}
 
 /*--------ABOUT-----------------*/
 
 
 .about__hero {
-    background: $secondarybg;
-    position: relative;
-    display: grid;
-    padding: 0;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(6, auto);
-    justify-content: center;
-    margin: 1rem 0 0 0;
-    max-width: 65rem;
 
     blockquote {
-        font-size: 2.5em;
-        grid-column: 2 / 7;
-        grid-row: 1 / 6;
-        margin: 0;
-        text-align: left;
-        justify-content: flex-end;
-        align-self: flex-start;
+        font-size: 2rem;
+        grid-column: 1 / 5;
+        grid-row: 1 / 4;
+        margin: 0 0 0 8rem;
     }
-
 }
 
 .about__quote {
-    font-size: 1em;
-    grid-column: 2 / 5;
-    grid-row: 5 / 7;
-    margin: 0;
-    align-self: flex-start;
+    margin: 0.5rem 0 0 8rem;
+    font-size: 0.8rem;
 }
 
 .about__hero_role {
-    grid-column: 2 / 10;
+    display: block;
+    grid-column: 1 / -1;
     grid-row: 5 / 6;
+    margin: 0.5rem 0 0 8rem;
+    font-size: 0.8rem;
+    color: #fff;
 }
 
 .about__overlay {
     width: 100%;
     height: 100%;
-    grid-column: 5 / 12;
-    grid-row: 1 / -1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    grid-column: 2 / 12;
+    grid-row: 2 / -1;
+    margin: 0 2em 0 0;
 
     img {
         width: 100%;
-        object-fit: cover;
+    }
+}
+
+.about__joinus {
+    padding: 8rem;
+
+    h3 {
+        max-width: 100%;
     }
 }
 
 .about__text {
-    display: flex;
-    flex-direction: column;
-    p {
-        padding: 0 0 1.6rem 0;
-        text-align: left;
-        grid-column: 3 / 11;
-    }
-}
 
-.about__us {
-    margin-bottom: 2rem;
+    p {
+        padding: 1rem 8rem;
+    }
+
 }
 
 .about__items {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    padding: 8rem 0;
 }
 
 .about__circle {
-    margin: 0 0 2rem 0;
-    width: 30rem;
-    height: 150px;
-    p {
-        font-size: 0.75em;
-        font-weight: normal;
-    }
-}
-.about__circle_text{
-    width: 40rem;
-    p{
-        text-align: left;
-    }
-}
-
-.about__subscribe {
-    max-width: 40rem;
+    margin: 0 8rem 1rem;
 }
 
 /*--------APPROACH-----------------*/
 
 .approach__about {
-    padding: 2rem 0;
-    align-items: center;
-
+    padding: 1.6rem 8rem;
 }
-
 
 .approach__season1 {
-    width: 70%;
-    margin: 0 auto;
-    display: flex;
-
-}
-
-.approach__banner {
-    width: 100%;
-    display: flex;
-}
-
-.approach__intro {
-    width: 100%;
-    flex-direction: column;
-
+    padding: 1.6rem 8rem;
 }
 
 .approach__upcoming {
-
     ul {
-        margin: 0 0 1em 0;
-        display: flex;
-        width: 70%;
-        justify-content: center;
 
         li {
-            margin: 1em;
+            margin: 2rem;
+            width: 11rem;
+            height: 11rem;
         }
-    }
-
-    h3 {
-        font-size: 1.4rem;
-
     }
 }
 
 /*--------NETWORK SCIENCE-----------------*/
 
-.netscience {
-    align-items: center;
-    margin: 0 0 1em 0;
-}
-
-.netscience__inner_disc {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 .netscience__text {
-    display: flex;
-    flex-direction: column;
-    
+
+    justify-content: center;
+    align-items: center;
+
+    h4 {
+        padding: 1.5rem 8rem 0;
+        font-size: 0.9rem;
+    }
 
     p {
-        padding: 1em 0;
+        padding: 1.5rem 8rem 0;
     }
 }
 
 .netscience__apps {
-    grid-template-columns: repeat(12, 1fr);
-    max-width: 65rem;
-
-    h3 {
-        justify-self: center;
-        grid-column: 1 / -1;
-        grid-row: 1 / 2;
-        margin: 2em 0;
-    }
-
-    button {
-        grid-column: 1 / -1;
-        grid-row: 20 / 21;
-        justify-self: center;
-    }
-}
-
-
-.netscience__circle {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0 0 2.5em 0;
-
-    h5 {
-        font-size: 1em;
-    }
-
-    span {
-        display: flex;
-        width: 150px;
-        height: 150px;
-        position: relative;
-
-        img {
-            /*  position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%); */
-            object-fit: cover;
-        }
-    }
+    grid-template-columns: 8rem repeat(10, 1fr) 8rem;
+    grid-template-rows: auto;
+    padding: 1.6rem 0;
 }
 
 .netscience__circle1 {
@@ -370,6 +144,7 @@
 .netscience__circle2 {
     grid-column: 5 / 9;
     grid-row: 2 / 4;
+    align-self: center;
 }
 
 .netscience__circle3 {
@@ -379,20 +154,21 @@
 
 .netscience__circle4 {
     grid-column: 2 / 5;
-    grid-row: 5 / 7;
+    grid-row: 4 / 6;
 }
 
 .netscience__circle5 {
     grid-column: 5 / 9;
-    grid-row: 5 / 7;
+    grid-row: 4 / 6;
 }
 
 .netscience__circle6 {
     grid-column: 9 / 12;
-    grid-row: 5 / 7;
+    grid-row: 4 / 6;
 }
 
 /*--------FOOTER-----------------*/
+
 
 .footer {
     padding: 2em 0 0 0;
@@ -405,7 +181,7 @@
 
 .footer__inner {
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: 8rem repeat(10, 1fr) 8rem;
     padding: 0;
 
     a {
@@ -425,17 +201,21 @@
 .footer__logo,
 .footer__copy {
     padding: 1.5rem 1rem;
-    ul{
+
+    ul {
         flex-direction: column;
+
         li {
-        margin: 0 0.5rem 0 0;
-    } 
+            margin: 0 0.5rem 0 0;
+        }
     }
-    
+
 }
 
 .footer__logo {
-    grid-column: 2 / 5;
+    grid-column: 2 / -1;
+    grid-row: 1 / 2;
+
     a {
         font-size: 1.5rem;
         text-decoration: none;
@@ -443,21 +223,28 @@
 }
 
 .footer__contact {
-    grid-column: 5 / 9;
+    grid-column: 2 / 6;
+    grid-row: 2 / 4;
+
     i {
         margin: 0 1rem 0 0;
     }
 }
 
 .footer__resource {
-    grid-column: 9 / 11;
+    grid-column: 6 / 10;
+    grid-row: 2 / 6;
     border-top: 1px solid transparent;
+    justify-self: center;
 }
 
 .footer__social {
-    grid-column: 11 / 12;
+    grid-column: 10 / 12;
+    grid-row: 2 / 6;
     border-top: 1px solid transparent;
-    ul{
+    justify-self: center;
+
+    ul {
         display: flex;
         flex-direction: row;
     }
@@ -465,6 +252,6 @@
 
 .footer__copy {
     grid-column: 2 / 12;
-    grid-row: 2 / 6;
+    grid-row: 6 / 7;
     margin: 0;
 }
